--- a/public/404.html
+++ b/public/404.html
@@ -2,11 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=/noahpn/" />
-    <meta name="robots" content="noindex" />
-    <title>Redirecting…</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Canonical (absolute, homepage) -->
+    <link rel="canonical" href="https://sereneprince.github.io/noahpn/" />
+
+    <!-- Indexing (safe for SPA redirect) -->
+    <meta name="robots" content="index,follow" />
+
+    <!-- Redirect back to SPA -->
+    <meta http-equiv="refresh" content="1; url=/noahpn/" />
+
+    <title>Page not found · Noah Park-Nguyen</title>
+
+    <style>
+      :root {
+        color-scheme: light dark;
+        --color-bg: #fbfaf5;
+        --color-fg: #181a18;
+        --font-sans: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --color-bg: #181a18;
+          --color-fg: #fbfaf5;
+        }
+      }
+
+      html,
+      body {
+        height: 100%;
+      }
+
+      body {
+        margin: 0;
+        font-family: var(--font-sans);
+        background: var(--color-bg);
+        color: var(--color-fg);
+        display: grid;
+        place-items: center;
+        padding: 2rem;
+        line-height: 1.5;
+      }
+
+      main {
+        max-width: 60ch;
+      }
+
+      a {
+        color: inherit;
+        text-underline-offset: 0.25em;
+        text-decoration-thickness: 1px;
+      }
+
+      a:hover {
+        text-decoration-thickness: 2px;
+      }
+
+      :focus-visible {
+        outline: 2px solid currentColor;
+        outline-offset: 4px;
+      }
+    </style>
   </head>
+
   <body>
-    <a href="/noahpn/">Go to site</a>
+    <main>
+      <h1>Page not found</h1>
+      <p>That URL doesn't exist. Redirecting you to the homepage…</p>
+      <p><a href="/noahpn/">Go to the homepage</a></p>
+
+      <noscript>
+        <p>JavaScript is disabled, so please use the link above.</p>
+      </noscript>
+    </main>
   </body>
 </html>
